scripts/tests/errors/err_struct_var_alone.bu
// BAD: struct with var and nothing else, then loop
struct Broken {
    var
}

while (true) {
    break;
}
print("should not reach here");
